syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstNamedTableItemExProtobuf";

message	ConstNamedTableItemEx  {
	 string	name = 1;
	 uint32	t = 2;
	 string	title = 3;
	 string	desc = 4;
	 string	icon = 5;
}